--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,14 +3,16 @@
 html{
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  color:#909090
+  color:#909090;
+  line-height: 1.8rem;
 
 }
 
 h1{
   font-size: 2.5rem;
   font-weight: bold;
-  color:#585858
+  color:#585858;
+  line-height: 2.5rem;
 }
 
 h2{
@@ -75,19 +77,42 @@ header a:hover{
   color: #A9A9A9;
 }
 
+/*mobile nav */
+
+.mobile{
+  display:none;
+}
+
+@media only screen and (max-width: 480px){
+
+
+  .mobile{
+    display:flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .desktop,
+  .logo{
+    display:none;
+  }
+
+}
+
 
 /*banner*/
 
 .banner{
   display: flex;
-  flex-flow: row nowrap;
-  background-color: ##909090;
+  flex-flow: row nowrap;;
+  justify-content: flex-start;
+  background-color: #E0E0E0;
 }
 
 
 .left{
   width: 60%;
-  padding: 32px 24px;
+  padding: 2rem 1.5rem;
   display:flex;
   flex-flow: column;
   align-items: flex-start;
@@ -103,12 +128,10 @@ header a:hover{
   width: 40%;
   display: flex;
   flex-flow: column;
-  align-items: center;
-  text-align: center;
   justify-content: center;
-  justify-content: flex-start;
-  padding-top: .8rem;
 }
+
+
 
 button{
   width: 80%;
@@ -126,6 +149,30 @@ button:hover{
   background-color: #E0E0E0;
 }
 
+@media only screen and (max-width: 480px){
+
+
+  .banner{
+    flex-flow: column;
+  }
+
+  .left{
+    width: 100%;
+    margin:0rem;
+    padding: 0rem;
+  }
+
+  .right{
+    padding: 2rem 1rem;
+    width: auto;
+
+  }
+
+  button{
+    width: 95%;
+  }
+}
+
 /*information section */
 
 .info{
@@ -138,6 +185,12 @@ button:hover{
   flex-flow: row nowrap;
 }
 
+.info .right{
+  justify-content: flex-start;
+  padding-top: .8rem;
+}
+
+
 .information img{
   width: 35%;
   height: 100%;
@@ -147,6 +200,14 @@ button:hover{
 .left p{
   margin-bottom: 2rem;
 }
+
+@media only screen and (max-width: 480px){
+
+  .info .left{
+    display: none;
+  }
+}
+
 
 /* detail boxes */
 
@@ -167,7 +228,7 @@ button:hover{
 }
 .details a{
   text-decoration: none;
-  color: coral;
+  color: #FF7F50;
 }
 
 .info .information:last-child{
@@ -210,7 +271,16 @@ button:hover{
 }
 
 .majors p{
-  margin: .5rem 1rem 1.5rem 0rem;
+  margin: .5rem;
+}
+
+.content a{
+  text-decoration: none;
+  color: #585858;
+}
+
+.content a:hover{
+  color:#909090
 }
 
 .majors:nth-child(3n+0){
@@ -238,6 +308,11 @@ button:hover{
 padding-top: 0rem;
 }
 
+.thesis .right{
+  justify-content: flex-start;
+  padding-top: .8rem;
+}
+
 .thesis .information:first-child{
   background-color: #E0E0E0;
 }
@@ -250,7 +325,7 @@ footer{
   flex-flow: row nowrap;
   justify-content: space-between;
   font-size: 1rem;
-  padding: 16px 24px;
+  padding: 1rem 1.5rem;
 }
 
 footer nav{
